--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
 language: python
+
+python:
   - "2.6"
   - "2.7"
-install: sudo make build-dep test-dep
-script: make travis
+
+install:
+  - pip install pytest pylint==1.3.1 argh boto cheetah docutils genshi GitPython paramiko setuptools sphinx
+  - git fetch https://github.com/jaraco/path.py 5.1
+  - git cat-file blob FETCH_HEAD:path.py > path.py
+
+script:
+  - # Travis does a shallow clone and won't find tags with git describe
+  - echo "__version__ = '0.7-travis'" > poni/version.py
+  - make all rst2html=rst2html.py
+  - "(python -V 2>&1 | grep -qF 'Python 2.6') || make pylint"
+  - make tests
+
 notifications:
   slack: ohmu:rihgYxa0c4dFiPvdAPAgP7R4
