--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  - "3.4"
 
 install:
-  - pip install pytest pylint==1.3.1 argh boto cheetah docutils genshi GitPython paramiko setuptools sphinx
+  - pip install pytest pylint==1.3.1 argh boto docutils genshi GitPython paramiko setuptools sphinx
+  - "(python -V 2>&1 | grep -qF 'Python 3') || pip install cheetah"
 
 script:
   - # Travis does a shallow clone and won't find tags with git describe
